Changed default map and commented linetrace bp

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -66,7 +66,7 @@ bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 GameInstanceClass=/Script/Engine.GameInstance
-GameDefaultMap=/Game/Le_Labyrinthe/Maps/RulesMap.RulesMap
+GameDefaultMap=/Game/Le_Labyrinthe/Maps/LabyrintheMap.LabyrintheMap
 ServerDefaultMap=/Engine/Maps/Entry
 GlobalDefaultGameMode=/Game/Le_Labyrinthe/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode_C
 GlobalDefaultServerGameMode=None
