--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -239,10 +239,13 @@ CleanShutdown=False
 OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/BP_Collision.BP_Collision
 OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/BP_Torche.BP_Torche
 OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/BP_Button.BP_Button
+OpenAssetsAtExit=/Game/Le_Labyrinthe/Input/IMC_base.IMC_base
 OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/PC_base.PC_base
+OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/BP_WinZone.BP_WinZone
 OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/AC_LineTrace.AC_LineTrace
 OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/BP_Trap.BP_Trap
 OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/BP_FirstPersonGameMode.BP_FirstPersonGameMode
+OpenAssetsAtExit=/Game/Le_Labyrinthe/Blueprints/BP_FirstPersonCharacter.BP_FirstPersonCharacter
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -826,14 +829,14 @@ EdGraph.Graph=True
 BP_WinZone_C.TransformCommon=True
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Le_Labyrinthe/Blueprints/BP_WinZone
-MRUItem1=/Game/Le_Labyrinthe/Blueprints/BP_FirstPersonGameMode
-MRUItem2=/Game/Le_Labyrinthe/Blueprints/BP_Button
-MRUItem3=/Game/Le_Labyrinthe/Blueprints/AC_LineTrace
-MRUItem4=/Game/Le_Labyrinthe/Input/IA_Interact
-MRUItem5=/Game/Le_Labyrinthe/Blueprints/BP_Trap
-MRUItem6=/Game/Le_Labyrinthe/Input/IA_Move
-MRUItem7=/Game/Le_Labyrinthe/Blueprints/BP_FirstPersonCharacter
+MRUItem0=/Game/Le_Labyrinthe/Blueprints/BP_FirstPersonCharacter
+MRUItem1=/Game/Le_Labyrinthe/Blueprints/BP_WinZone
+MRUItem2=/Game/Le_Labyrinthe/Blueprints/BP_FirstPersonGameMode
+MRUItem3=/Game/Le_Labyrinthe/Blueprints/BP_Button
+MRUItem4=/Game/Le_Labyrinthe/Blueprints/AC_LineTrace
+MRUItem5=/Game/Le_Labyrinthe/Input/IA_Interact
+MRUItem6=/Game/Le_Labyrinthe/Blueprints/BP_Trap
+MRUItem7=/Game/Le_Labyrinthe/Input/IA_Move
 MRUItem8=/Game/Le_Labyrinthe/Blueprints/PC_base
 MRUItem9=/Game/Le_Labyrinthe/Input/IMC_base
 MRUItem10=/Game/Le_Labyrinthe/Input/IA_Look
